# Personalized-Learning-Recommendation-System

./: .gitignore  README.md  plrs-landing.html
.github/workflows/: main.yml
data/: skill_encoder_v2.csv
data/knowledge_maps/: cs_dag.json
plrs-product-final/plrs-product/: LICENSE  pyproject.toml
plrs-product-final/plrs-product/.github/workflows/: ci.yml
plrs-product-final/plrs-product/data/knowledge_maps/: math_dag.json
plrs-product-final/plrs-product/demos/: app.py
plrs-product-final/plrs-product/plrs/: __init__.py  pipeline.py
plrs-product-final/plrs-product/plrs/api/: __init__.py
plrs-product-final/plrs-product/plrs/constraints/: __init__.py  dag.py
plrs-product-final/plrs-product/plrs/curriculum/: __init__.py  loader.py
plrs-product-final/plrs-product/plrs/model/: __init__.py  evaluator.py  sakt_decay.py
plrs-product-final/plrs-product/scripts/: train.py
plrs-product-final/plrs-product/tests/: test_core.py
plrs/api/: app.py  auth.py  rate_limit.py
plrs/model/: sakt.py  trainer.py
plrs/ranking/: __init__.py  ranker.py  spaced_repetition.py
scripts/: evaluate.py  manage_keys.py  serve.py
tests/: test_api.py  test_auth_rate_limit.py  test_evaluator.py  test_spaced_repetition.py
