[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plrs"
version = "0.1.0"
description = "Constraint-aware personalized learning recommendations. Plug in your curriculum, get intelligent recommendations out."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Clementina Tom", email = "clementina@example.com" }]
keywords = ["education", "knowledge-tracing", "recommendation-system", "machine-learning", "edtech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "networkx>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.33"]
dev  = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.urls]
Homepage    = "https://github.com/clementina-tom/plrs"
Repository  = "https://github.com/clementina-tom/plrs"
"Bug Tracker" = "https://github.com/clementina-tom/plrs/issues"

[project.scripts]
plrs = "plrs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plrs*"]

[tool.ruff]
line-length = 100
target-version = "py310"
